--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 .DS_Store
+.fleet
+.idea
 node_modules
 dist
 TODOs.md
 
 # local env files
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# Logs
+logs
+*.log
 
 # Editor directories and files
 .idea
@@ -22,3 +22,11 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
